--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "babel-core": "^6.6.0",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --colors",
+    "start": "webpack-dev-server --colors --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
