--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "devDependencies": {
     "babel-core": "^6.6.0",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "todomvc-app-css": "^2.0.4",
+    "todomvc-common": "^1.0.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
