--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
@@ -20,6 +21,7 @@
     "style-loader": "^0.13.0",
     "todomvc-app-css": "^2.0.4",
     "todomvc-common": "^1.0.2",
+    "uuid": "^2.0.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
