--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "keycodes": "^0.2.3",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
+    "redux-actions": "^0.9.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "todomvc-app-css": "^2.0.4",
