--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.5.0",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
+    "keycodes": "^0.2.3",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
